# POO-Simulador_de_Habitacao

./: CMakeLists.txt  README.md  main.cpp
Class/Componente/: Componente.cpp  Componente.h
Class/Componente/Aparelho/: Aparelho.cpp  Aparelho.h  AparelhoFactory.cpp  AparelhoFactory.h
Class/Componente/Aparelho/Aquecedor/: Aquecedor.cpp  Aquecedor.h
Class/Componente/Aparelho/Aspersor/: Aspersor.cpp  Aspersor.h
Class/Componente/Aparelho/Lampada/: Lampada.cpp  Lampada.h
Class/Componente/Aparelho/Refrigerador/: Refrigerador.cpp  Refrigerador.h
Class/Componente/Processador/: Processador.cpp  Processador.h
Class/Componente/Regra/: Regra.cpp  Regra.h
Class/Componente/Sensor/: Sensor.cpp  Sensor.h  SensorFactory.cpp  SensorFactory.h  Sensores.h
Class/Componente/Sensor/SensorFumo/: SensorFumo.h
Class/Componente/Sensor/SensorHumidade/: SensorHumidade.h
Class/Componente/Sensor/SensorLuminosidade/: SensorLuminosidade.cpp  SensorLuminosidade.h
Class/Componente/Sensor/SensorMovimento/: SensorMovimento.h
Class/Componente/Sensor/SensorRadiacao/: SensorRadiacao.h
Class/Componente/Sensor/SensorSom/: SensorSom.cpp  SensorSom.h
Class/Componente/Sensor/SensorTemperatura/: SensorTemperatura.cpp  SensorTemperatura.h
Class/Habitacao/: Habitacao.cpp  Habitacao.h
Class/Habitacao/Zona/: Zona.cpp  Zona.h
Class/Habitacao/Zona/Ambiente/: Ambiente.cpp  Ambiente.h
Class/Habitacao/Zona/Aparelho/: Aparelho.cpp  Aparelho.h
Class/Habitacao/Zona/Aparelho/Aquecedor/: Aquecedor.cpp  Aquecedor.h
Class/Habitacao/Zona/Aparelho/Aspersor/: Aspersor.cpp  Aspersor.h
Class/Habitacao/Zona/Aparelho/Lampada/: Lampada.cpp  Lampada.h
Class/Habitacao/Zona/Aparelho/Refrigerador/: Refrigerador.cpp  Refrigerador.h
Class/Habitacao/Zona/Componente/: Componente.cpp  Componente.h
Class/Habitacao/Zona/Componente/Aparelho/: Aparelho.cpp  Aparelho.h  AparelhoFactory.cpp  AparelhoFactory.h  Aparelhos.h
Class/Habitacao/Zona/Componente/Aparelho/Aquecedor/: Aquecedor.cpp  Aquecedor.h
Class/Habitacao/Zona/Componente/Aparelho/Aspersor/: Aspersor.cpp  Aspersor.h
Class/Habitacao/Zona/Componente/Aparelho/Lampada/: Lampada.cpp  Lampada.h
Class/Habitacao/Zona/Componente/Aparelho/Refrigerador/: Refrigerador.cpp  Refrigerador.h
Class/Habitacao/Zona/Componente/Processador/: Processador.cpp  Processador.h
Class/Habitacao/Zona/Componente/Processador/Regra/: Regra.h
Class/Habitacao/Zona/Componente/Regra/: Regra.cpp  Regra.h
Class/Habitacao/Zona/Componente/Sensor/: Sensor.cpp  Sensor.h  SensorFactory.cpp  SensorFactory.h  Sensores.h
Class/Habitacao/Zona/Componente/Sensor/SensorFumo/: SensorFumo.cpp  SensorFumo.h
Class/Habitacao/Zona/Componente/Sensor/SensorHumidade/: SensorHumidade.cpp  SensorHumidade.h
Class/Habitacao/Zona/Componente/Sensor/SensorLuminosidade/: SensorLuminosidade.h
Class/Habitacao/Zona/Componente/Sensor/SensorMovimento/: SensorMovimento.cpp  SensorMovimento.h
Class/Habitacao/Zona/Componente/Sensor/SensorRadiacao/: SensorRadiacao.cpp  SensorRadiacao.h
Class/Habitacao/Zona/Componente/Sensor/SensorSom/: SensorSom.h
Class/Habitacao/Zona/Componente/Sensor/SensorTemperatura/: SensorTemperatura.h
Class/Habitacao/Zona/Componentes/Aparelho/: Aparelho.cpp  Aparelho.h
Class/Habitacao/Zona/Componentes/Aparelho/Aspersor/: Aspersor.cpp
Class/Habitacao/Zona/Componentes/Aparelho/Lampada/: Lampada.cpp
Class/Habitacao/Zona/Componentes/Aparelho/Refrigerador/: Refrigerador.h
Class/Habitacao/Zona/Componentes/Processador/: Processador.cpp  Processador.h
Class/Habitacao/Zona/Componentes/Processador/Regra/: Regra.cpp  Regra.h
Class/Habitacao/Zona/Componentes/Sensor/: Sensor.cpp  Sensor.h
Class/Habitacao/Zona/Processador/: Processador.cpp  Processador.h
Class/Habitacao/Zona/Propriedade/: Propriedade.cpp  Propriedade.h  Propriedades.h
Class/Habitacao/Zona/Propriedade/Fumo/: Fumo.cpp  Fumo.h
Class/Habitacao/Zona/Propriedade/Humidade/: Humidade.cpp  Humidade.h
Class/Habitacao/Zona/Propriedade/Luz/: Luz.cpp  Luz.h
Class/Habitacao/Zona/Propriedade/Radiacao/: Radiacao.cpp  Radiacao.h
Class/Habitacao/Zona/Propriedade/Som/: Som.cpp  Som.h
Class/Habitacao/Zona/Propriedade/Temperatura/: Temperatura.cpp  Temperatura.h
Class/Habitacao/Zona/Propriedade/Vibracao/: Vibracao.cpp  Vibracao.h
Class/Habitacao/Zona/Sensor/: Sensor.cpp  Sensor.h
Class/Propriedade/: Propriedade.cpp  Propriedade.h
Class/Propriedade/Fumo/: Fumo.cpp  Fumo.h
Class/Propriedade/Humidade/: Humidade.cpp  Humidade.h
Class/Propriedade/Luz/: Luz.cpp  Luz.h
Class/Propriedade/Radiacao/: Radiacao.cpp
Class/Propriedade/Som/: Som.cpp  Som.h
Class/Propriedade/Temperatura/: Temperatura.cpp
Class/Propriedade/Vibracao/: Vibracao.cpp
Class/Simulador/: Simulador.cpp  Simulador.h
Class/Zona/: Zona.cpp  Zona.h
File/: acom.txt  asoc.txt  cnovo.txt  comandos.txt  crem.txt  insta.txt  listProps.txt  nova_hab.txt  pmuda.txt  psalva.txt  rlista.txt  rnova.txt  rrem.txt  zona.txt
Lib/: Terminal.h
Lib/Terminal/: Terminal.cpp  Terminal.h
Lib/utils/: utils.cpp  utils.h
